2024-12-15  Gavin Salam  <gavin.salam@physics.ox.ac.uk>

	* VERSION:
	updated to 1.101-devel

2024-12-15 Sun  <gavin.salam@physics.ox.ac.uk>

	* configure:
	for Darwin buids, added "-Wl,-headerpad_max_install_names" to
	dynlibopt, as per request from Matthew Feickert
	
2024-12-13  Matteo, Gregory, Gavin

	* NEWS:
	* VERSION:
	prepared for 1.100 release.

	* configure:
	added check that contribs don't have both VERSION and FJCONTRIB.cfg files.

	* contribs.svn:
	* NEWS:
	updated IFNPlugin to 1.0.4 (removing spurious dependency on RecursiveTools in Makefile)

2024-12-13  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* scripts/internal/generate-html-contents.pl
        added javascript function to sort table in contrib name
        alphabetical order and release date

2024-12-12  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* scripts/internal/generate-html-contents.pl
	updated to also output information about dependencies and minimal
	FastJet version

2024-12-12 Thu  <gavin.salam@physics.ox.ac.uk> + Matteo + Gregory

	* NEWS:
	* contribs.svn:
	updated IFNPlugin to 1.0.3 and added CMPPlugin 1.0.0


	* scripts/internal/Template/FJCONTRIB.cfg:
	added commented "minimal_fastjet_version:..." line

	* DEVEL-GUIDELINES:
	replaced a ref to VERSION -> FJCONTRIB.cfg

	* configure:
	fixed location of output of `fastjet-config --version` info 

2024-12-12  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* configure:
	* scripts/internal/common.sh:
	* DEVEL-GUIDELINES:
	added handling of minimal_fastjet_version in contribs 
	configuration files

2024-12-11  Gavin Salam  <gavin.salam@physics.ox.ac.uk>

	* VERSION:
	upped this to 1.100-devel, to reflect significance of new
	dependencies functionality.

2024-12-11  Gregory Soyez  <soyez@fastjet.fr> + Gavin+Matteo

	* contribs.svn:
	switched LundPlane over to version 2.1.2

2024-12-11  Gavin Salam  <gavin.salam@physics.ox.ac.uk>

	* NEWS:
	* contribs.svn:
	updated RecursiveTools to 2.0.4 + mentioned this in NEWS
